@@ -2,6 +2,8 @@ CHANGELOG XX XXX 2011 Pierre Frisch
 Rev the source code to 3.4.2
 Update service text - ID: 3400063
 Interface Discovery - ID: 3399444
+Question about function in HostInfo.java - ID: 3400651
+StringIndexOutOfBounds in ServiceInfoImpl.java - ID: 3393338
 
 CHANGELOG 24 August 2011 Pierre Frisch
 Rev the source code to 3.4.1
